# product-strategy-llmops-project

./: .env.example  .gitignore  pyproject.toml
app/: main.py
app/api/v1/: api.py  auth.py  llm.py
app/core/: config.py  limiter.py  logging.py  metrics.py  middleware.py  observability.py
app/core/langgraph/: graph.py
app/core/langgraph/tools/: __init__.py  competitor.py  market.py  tavily.py
app/models/: __init__.py  session.py  user.py
app/schemas/: __init__.py  graph.py  session.py  user.py
app/services/: database.py  dependencies.py  user_db.py
app/services/llm/: __init__.py  registry.py  service.py
