[project]
name = "product-strategy-copilot"
version = "1"
description = "Multiagent System for devising product strategy"
authors = [
    {name = "Shruti-lab"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "langgraph (>=1.2.5,<2.0.0)",
    "fastapi (>=0.137.1,<0.138.0)",
    "langchain (>=1.3.9,<2.0.0)",
    "langchain-core (>=1.4.7,<2.0.0)",
    "langchain-groq (>=1.1.3,<2.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "slowapi (>=0.1.10,<0.2.0)",
    "mem0ai (>=2.0.7,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]

[dependency-groups]
dev = [
    "pyinstrument (>=5.1.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
