[project]
name = "product-strategy-copilot"
version = "1"
description = "Multiagent System for devising product strategy"
authors = [
    {name = "Shruti-lab"}
]

package-mode = false

requires-python = ">=3.14,<4.0"
dependencies = [
    "langgraph (>=1.2.5,<2.0.0)",
    "fastapi (>=0.137.1,<0.138.0)",
    "langchain (>=1.3.9,<2.0.0)",
    "langchain-core (>=1.4.7,<2.0.0)",
    "langchain-groq (>=1.1.3,<2.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "bcrypt (>=4.1.3,<5.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "slowapi (>=0.1.10,<0.2.0)",
    "mem0ai (>=2.0.7,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "asgi-correlation-id (>=5.0.1,<6.0.0)",
    "structlog (>=26.1.0,<27.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "langgraph-checkpoint-postgres (>=3.1.0,<4.0.0)",
    "langchain-tavily (>=0.2.18,<0.3.0)",
    "prometheus-client (>=0.25.0,<0.26.0)",
    "starlette-prometheus (>=0.10.0,<0.11.0)",
    "langfuse (>=4.12.0,<5.0.0)",
    "prometheus-fastapi-instrumentator (>=8.0.2,<9.0.0)",
]

[dependency-groups]
dev = [
    "pyinstrument (>=5.1.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
